--- a/calc/index.html
+++ b/calc/index.html
@@ -72,7 +72,7 @@
     </div>
   </main>
 
-  <script defer src="/assets/js/j.8829a3ccde44.js"></script>
+  <script defer src="/assets/js/j.8829a3ccde44.js?v=68"></script>
   <script defer src="/assets/js/j.9179477b9417.js"></script>
 </body>
 </html>
