--- a/fortune/index.html
+++ b/fortune/index.html
@@ -38,7 +38,7 @@
   <link rel="stylesheet" href="/assets/c.0b3d8a45f8c9.css"/>
   <script defer src="/assets/js/j.efba3509e62c.js"></script>
   <link rel="stylesheet" href="/assets/c.a50dd3bc5b33.css"/>
-  <script defer src="/assets/js/j.8829a3ccde44.js"></script>
+  <script defer src="/assets/js/j.8829a3ccde44.js?v=68"></script>
 
   <link rel="stylesheet" href="/assets/css/fortune.v62.20260217.css"/>
 
