--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -19,10 +19,10 @@
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.43df7d0713c1.css" rel="stylesheet"/>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<link href="/assets/c.casino.evo.v62.20260217.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
+<link href="/assets/c.casino.evo.v62.20260217.css?v=69" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=69"></script>
 <script defer="" src="/assets/js/j.c471c3193855.js"></script>
-<script defer="" src="/assets/js/j.casino.evo.v62.20260217.js"></script>
+<script defer="" src="/assets/js/j.casino.evo.v62.20260217.js?v=69"></script>
 <script src="../assets/js/inline-bundles/b.cba5ff41a7.js"></script>
 <script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script type="application/ld+json">
@@ -249,7 +249,7 @@
     <button type="button" class="cs-evo-tab" data-panel="risk" aria-selected="false">세션리스크</button>
   </div>
   <div class="cs-evo-panels">
-<section class="cs-card cs-evo-panel on" data-panel=\"bac\" aria-label="바카라 하우스엣지">
+<section class="cs-card cs-evo-panel on" data-panel="bac" aria-label="바카라 하우스엣지">
       <h2>바카라: 기대값 · 하우스엣지</h2>
       <div class="cs-row" style="margin-top:10px;">
         <div class="cs-field" style="min-width:200px;">
@@ -285,7 +285,7 @@
       </div>
     </section>
 
-<section class="cs-card cs-evo-panel" data-panel=\"rou\" aria-label="룰렛 하우스엣지">
+<section class="cs-card cs-evo-panel" data-panel="rou" aria-label="룰렛 하우스엣지">
       <h2>룰렛: 기대 손실(이론)</h2>
       <div class="cs-row" style="margin-top:10px;">
         <div class="cs-field" style="min-width:220px;">
@@ -310,7 +310,7 @@
       </div>
     </section>
 
-<section class="cs-card cs-evo-panel" data-panel=\"risk\" aria-label="세션 리스크">
+<section class="cs-card cs-evo-panel" data-panel="risk" aria-label="세션 리스크">
       <h2>세션 리스크: 목표/손절 도달 확률</h2>
       <div class="cs-row" style="margin-top:10px;">
         <div class="cs-field" style="min-width:200px;">
