--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -5,24 +5,24 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>미니게임 분석기 | 파워볼·키노사다리 EV·공정배당 | 88ST</title>
-<meta content="동행 파워볼+·키노사다리·스피드키노사다리 배당을 입력해 EV(+EV), 마진(오버라운드), 공정배당을 계산합니다. (판단 보조용)" name="description"/>
-<meta content="미니게임 분석기, 파워볼 분석기, 키노사다리 분석기, 스피드키노사다리, 미니게임 EV, 오버라운드, 배당 마진, 공정배당, EV 계산기" name="keywords"/>
+<meta content="동행/베픽 파워볼+, 동행/베픽 키노사다리, 동행 스피드키노사다리 배당 입력 → 공정확률/EV/추천 + AI 브리핑(연속·편차·세션관리 자동태깅)." name="description"/>
+<meta content="파워볼,파워볼+,키노사다리,스피드키노사다리,동행,베픽,미니게임 분석기,EV,공정배당,확률,연속경고,편차,AI 브리핑" name="keywords"/>
 <meta content="index,follow" name="robots"/>
 <link href="https://88st.cloud/tool-minigame/" rel="canonical"/>
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
 <meta content="미니게임 분석기 | 파워볼·키노사다리 EV·공정배당 | 88ST" property="og:title"/>
-<meta content="동행 파워볼+·키노사다리·스피드키노사다리 배당을 입력해 EV(+EV), 마진(오버라운드), 공정배당을 계산합니다. (판단 보조용)" property="og:description"/>
+<meta content="동행/베픽 파워볼+, 동행/베픽 키노사다리, 동행 스피드키노사다리 배당 입력 → 공정확률/EV/추천 + AI 브리핑(연속·편차·세션관리 자동태깅)." property="og:description"/>
 <meta content="https://88st.cloud/tool-minigame/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.b9ac867a4d9b.css" rel="stylesheet"/>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<link href="/assets/c.minigame.v55.20260217.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-<script defer="" src="/assets/js/j.minigame.v55.20260217.js"></script>
-<script src="../assets/js/inline-bundles/b.minigame.v55.20260217.js"></script>
+<link href="/assets/c.minigame.v55.20260217.css?v=69" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=69"></script>
+<script defer="" src="/assets/js/j.minigame.v55.20260217.js?v=69"></script>
+<script src="../assets/js/inline-bundles/b.minigame.v55.20260217.js?v=69"></script>
 <script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script type="application/ld+json">
   {
@@ -40,8 +40,10 @@
 <section class="mg-hero">
 <h1>미니게임 분석기</h1>
 <p>
-        배당을 입력하면 <b>암시확률·마진(오버라운드)·공정확률/공정배당·EV</b>를 즉시 계산합니다.
-        결과 히스토리를 붙여넣으면 <b>빈도 기반 확률</b>도 자동으로 산출합니다.
+        <b>동행/베픽 파워볼+</b>, <b>동행/베픽 키노사다리</b>, <b>동행 스피드키노사다리</b> 배당을 넣으면
+        <b>암시확률·마진(오버라운드)·공정확률/공정배당·EV</b>를 즉시 계산합니다.
+        결과 히스토리를 붙여넣으면 <b>빈도 기반 확률</b>도 자동 산출하며,
+        <b>AI 브리핑</b>이 <b>연속·편차·세션관리</b> 경고를 자동 태깅해 “피해야 할 구간”을 빠르게 표시합니다.
       </p>
 </section>
 <div class="mg-grid">
