--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=68"></script>
 <link href="/assets/css/fortune.v62.20260217.css" rel="stylesheet"/>
 <meta content="https://88st.cloud/img/logo.png" property="og:image"/>
 <script type="application/ld+json">
@@ -231,13 +231,17 @@
 </ul>
 <div class="why-note">이 도구는 ‘예측’이 아니라 <b>세션/자금관리</b>를 위한 참고용 분석기입니다.</div>
 <div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_slot" href="/tool-slot/">슬롯 환수율(RTP) 분석기 열기 <span aria-hidden="true">→</span></a></div>
+</div>
+</div>
+</div>
+
 <div class="section" id="fortuneSection">
   <div class="section-header">
     <div class="title"><span class="badge">LUCK</span>오늘의 운 브리핑</div>
     <a class="insight-btn btn-mini" href="/fortune/">전체 보기 <span aria-hidden="true">→</span></a>
   </div>
 
-  <div class="fortune-widget" data-role="fortuneWidget">
+  <div class="fortune-widget fortune-compact" data-role="fortuneWidget">
     <div class="fortune-left">
       <div aria-label="오늘의 운 점수" class="fortune-ring" role="img">
         <div class="fortune-ring-inner">
@@ -314,10 +318,7 @@
 
 
 </div>
-</div>
-</div>
-</div>
-</div>
+
 <script defer="" src="/assets/js/fortune.v62.20260217.js"></script>
 <script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
