--- a/tool-slot/index.html
+++ b/tool-slot/index.html
@@ -15,7 +15,7 @@
 <meta content="RTP(환수율)·변동성·베팅·스핀 수를 기반으로 총베팅/기대손실/권장 뱅크롤/세션 비용을 계산합니다. 하우스엣지(100-RTP) 이해에 도움됩니다." property="og:description"/>
 <meta content="https://88st.cloud/tool-slot/" property="og:url"/>
 <link href="/assets/css/x.11d0a10f603d.css" rel="stylesheet"/>
-<link href="/assets/c.slot.v62.20260217.css" rel="stylesheet"/>
+<link href="/assets/c.slot.v62.20260217.css?v=68" rel="stylesheet"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -91,8 +91,8 @@
 <script defer="" src="/assets/js/j.d2cf652ff950.js"></script>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-<script defer="" src="/assets/js/j.slot.v62.20260217.js"></script>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=68"></script>
+<script defer="" src="/assets/js/j.slot.v62.20260217.js?v=68"></script>
 <meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
@@ -237,6 +237,15 @@
           <span class="sl-fav-chip" aria-hidden="true">즐겨찾기만</span>
         </button>
       </div>
+      <div class="sl-presets" id="slPresetRow" aria-label="프리셋">
+        <button class="chip" type="button" data-preset="missing">누락 필드</button>
+        <button class="chip" type="button" data-preset="highvol">고변동</button>
+        <button class="chip" type="button" data-preset="max5000">MaxWin ≥ 5,000x</button>
+        <button class="chip" type="button" data-preset="megaways">Megaways</button>
+        <button class="chip" type="button" data-preset="buy">Buy Feature</button>
+      </div>
+      <div class="sl-db-status" id="slDbStatus">DB 로딩 중…</div>
+
 
       <details class="sl-admin" style="margin-top:12px;">
         <summary>DB 관리 (게임 추가 · JSON 업로드 · 즐겨찾기/태그 확장)</summary>
