--- a/tool-virtual/index.html
+++ b/tool-virtual/index.html
@@ -34,7 +34,7 @@
   <script defer src="/assets/js/j.71bbe4a35d81.js"></script>
   <script defer src="/assets/js/j.d2cf652ff950.js"></script>
   <script defer src="/assets/js/j.efba3509e62c.js"></script>
-  <script defer src="/assets/js/j.8829a3ccde44.js?v=69"></script>
+  <script defer src="/assets/js/j.8829a3ccde44.js?v=70"></script>
 
   <link href="/assets/css/x.11d0a10f603d.css" rel="stylesheet"/>
   <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
@@ -251,8 +251,8 @@
 }
 
 /* --- AI Briefing (score / warnings / recommendations) --- */
-.aiBrief{margin-top:12px; padding:14px; border-radius:18px; background: rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.10); box-shadow: 0 12px 34px rgba(0,0,0,.14);} 
-[data-theme="light"] .aiBrief{background: rgba(0,0,0,.03); border:1px solid rgba(0,0,0,.10); box-shadow: 0 12px 28px rgba(0,0,0,.09);} 
+.aiBrief{margin-top:12px; padding:14px; border-radius:18px; background: var(--panel, rgba(255,255,255,.06)); border:1px solid var(--panel-border, rgba(255,255,255,.10)); box-shadow: var(--shadow-sm);} 
+[data-theme="light"] .aiBrief{background: var(--panel, rgba(245,246,248,.92)); border:1px solid var(--panel-border, rgba(15,23,42,.10)); box-shadow: var(--shadow-sm);} 
 .aiHead{display:flex; align-items:flex-end; justify-content:space-between; gap:12px; flex-wrap:wrap;}
 .aiTitle{font-weight:1200; letter-spacing:.02em;}
 .aiScoreWrap{display:flex; align-items:baseline; gap:10px;}
@@ -460,7 +460,7 @@
     </div>
   </div>
 
-  <script src="../assets/js/inline-bundles/b.virtual.v40.luxe.9f01c2.js?v=69"></script>
+  <script src="../assets/js/inline-bundles/b.virtual.v40.luxe.9f01c2.js?v=70"></script>
   <script id="__88stToolConfig" type="application/json" data-src="../assets/config/toolconfig/c.4b8e8f74b9.json"></script>
   <script>
     // Mobile/desktop dock polish: keep tools compact and insert a subtle divider between "예시" and "공유/저장/히스토리".
