--- a/tool-virtual/index.html
+++ b/tool-virtual/index.html
@@ -273,6 +273,9 @@
 .aiTag.bad{border-color: rgba(255,96,96,.35); background: rgba(255,96,96,.12);} 
 
 </style>
+<link href="/assets/vvip-pro.v71.css?v=71" rel="stylesheet"/>
+<script defer src="/assets/js/vvip-pro.v71.js?v=71"></script>
+<script defer src="/assets/js/vvip-brief.v71.js?v=71"></script>
 </head>
 
 <body>
@@ -433,6 +436,12 @@
           </div>
           <div class="aiTags" id="aiTags"></div>
         </div>
+<details class="vvip-pro vvip-pro--mt" id="vvipProVirtual" data-prokey="virtual-pro">
+  <summary>
+    <div class="sum-left">🛠️ PRO (근거·세부룰)</div>
+    <div class="sum-badge">접기/펼치기</div>
+  </summary>
+  <div class="vvip-pro-body">
 <div class="cmpWrap" id="cmpWrap">
   <div class="cmpHead">
     <div class="small"><b>Multi View</b> · A/B 비교 보드</div>
@@ -453,7 +462,10 @@
         <div class="small" id="explain">
           공정확률/공정배당은 입력 배당의 암시확률을 정규화해 계산합니다. “공정대비”는 그 공정배당 대비 얼마나 덜 불리한지(상대지표)를 보여줍니다.
         </div>
-        <div style="margin-top:12px;">
+  </div>
+</details>
+
+<div style="margin-top:12px;">
           <span class="chip neu" id="healthChip">대기</span>
         </div>
       </div>
