--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -276,7 +276,7 @@
     <div class="cs-evo-out" id="evoShoeOut" style="margin-top:10px;"></div>
   </section>
 
-<details class="vvip-pro vvip-pro--mt" id="csProEvo" data-prokey="casino-evo-pro">
+<details class="vvip-pro vvip-pro--mt" id="csProEvo" data-prokey="casino-evo-pro-v72" data-pro-nostore="1">
   <summary>
     <div class="sum-left">🧠 PRO (근거·세부룰)</div>
     <div class="sum-badge">하우스엣지 · 리스크</div>
