--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -133,9 +133,7 @@
 <div class="mg-divider"></div>
 <div class="mg-btnrow">
 <button class="mg-btn" id="mgReset" type="button">초기화</button>
-<button class="mg-btn" id="mgSave" type="button">저장</button>
-<button class="mg-btn primary" id="mgAnalyze" type="button">분석하기</button>
-</div>
+<button class="mg-btn" id="mgSave" type="button">저장</button></div>
 <details class="mg-acc vvip-pro" aria-label="세션 관리(접기)" data-prokey="minigame-session">
   <summary>세션 관리 (선택)</summary>
   <div class="vvip-pro-body">
@@ -214,6 +212,12 @@
 <div id="mgPickList" style="margin-top:10px;"></div>
 </section>
 <div class="mg-divider"></div>
+<details class="vvip-pro mg-doc" data-prokey="minigame-doc" data-pro-nostore="1">
+  <summary>
+    <div class="sum-left"><span class="vvip-pro-title">📘 설명서 (사용법)</span></div>
+    <div class="sum-badge">접기/열기</div>
+  </summary>
+  <div class="vvip-pro-body">
 <section aria-label="사용법" class="mg-how">
 <h3 style="margin:0 0 10px;">사용법 (빠른 시작)</h3>
 <div class="mg-how-grid">
@@ -247,6 +251,8 @@
           <br/>
           • 이 도구는 계산을 돕기 위한 용도이며, 실제 결과는 변동성이 큽니다.
         </div>
+  </div>
+</details>
 <div class="mg-divider"></div>
 <section aria-label="안내" class="mg-foot">
 <h3>SEO / 안내</h3>
