--- a/cert/index.html
+++ b/cert/index.html
@@ -132,7 +132,7 @@
 </div>
 </div>
 </div>
-<script defer="" src="/assets/js/j.cert.v56.20260217.js"></script>
+<script defer="" src="/assets/js/j.cert.v56.20260217.js?v=73"></script>
 <script type="application/ld+json">
   {
     "@context":"https://schema.org",
