--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -19,10 +19,10 @@
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.43df7d0713c1.css" rel="stylesheet"/>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<link href="/assets/c.casino.evo.v62.20260217.css?v=70" rel="stylesheet"/>
+<link href="/assets/c.casino.evo.v62.20260217.css?v=74" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js?v=70"></script>
 <script defer="" src="/assets/js/j.c471c3193855.js"></script>
-<script defer="" src="/assets/js/j.casino.evo.v62.20260217.js?v=73"></script>
+<script defer="" src="/assets/js/j.casino.evo.v62.20260217.js?v=74"></script>
 <script src="../assets/js/inline-bundles/b.cba5ff41a7.js"></script>
 <script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script type="application/ld+json">
@@ -264,7 +264,18 @@
         <button class="cs-shoe-pill on" type="button" data-provider="evo">Evolution</button>
         <button class="cs-shoe-pill" type="button" data-provider="prag">Pragmatic</button>
       </div>
-      <div class="cs-shoe-actions">
+      <div class="cs-shoe-controls" aria-label="예상 옵션">
+<div class="cs-shoe-group"><span class="lbl">최근</span>
+<button class="cs-shoe-pill" type="button" data-window="20">20</button>
+<button class="cs-shoe-pill" type="button" data-window="50">50</button>
+<button class="cs-shoe-pill" type="button" data-window="100">100</button>
+</div>
+<div class="cs-shoe-group"><span class="lbl">예상모드</span>
+<button class="cs-shoe-pill" type="button" data-mode="cons">보수</button>
+<button class="cs-shoe-pill" type="button" data-mode="agg">공격</button>
+</div>
+</div>
+<div class="cs-shoe-actions">
         <button class="insight-btn btn-mini" type="button" data-add="P">PLAYER</button>
         <button class="insight-btn btn-mini" type="button" data-add="B">BANKER</button>
         <button class="insight-btn btn-mini" type="button" data-add="T">TIE</button>
