--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -21,7 +21,7 @@
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <link href="/assets/c.minigame.v55.20260217.css?v=70" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js?v=70"></script>
-<script defer="" src="/assets/js/j.minigame.v55.20260217.js?v=73"></script>
+<script defer="" src="/assets/js/j.minigame.v55.20260217.js?v=74"></script>
 <script src="../assets/js/inline-bundles/b.minigame.v55.20260217.js?v=70"></script>
 <script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script type="application/ld+json">
@@ -165,6 +165,7 @@
 <div class="mg-kpi"><div class="k">마진(오버라운드)</div><div class="v" id="mgMargin">—</div><div class="s">Σ-1</div></div>
 <div class="mg-kpi"><div class="k">입력 표본</div><div class="v" id="mgN">—</div><div class="s">히스토리 건수</div></div>
 <div class="mg-kpi"><div class="k">EV 기준</div><div class="v" id="mgMode">—</div><div class="s">최근 결과 기반</div></div>
+<div class="mg-kpi mg-kpi--next"><div class="k">다음 예상</div><div class="v" id="mgNextPred">—</div><div class="s" id="mgNextPredSub">최근 N 기반</div></div>
 </div>
 <div aria-label="세션 알림" class="mg-risk" id="mgRiskBox" style="margin-top:10px;"></div>
 <div class="mg-divider"></div>
