--- a/bonus-checklist/index.html
+++ b/bonus-checklist/index.html
@@ -37,8 +37,12 @@
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js?v=68"></script>
-<link href="https://88st.cloud/bonus-checklist/" rel="canonical"/><meta content="https://88st.cloud/bonus-checklist/" property="og:url"/><meta content="/img/logo.png" property="og:image"/></head>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=75"></script>
+<link href="https://88st.cloud/bonus-checklist/" rel="canonical"/><meta content="https://88st.cloud/bonus-checklist/" property="og:url"/><meta content="/img/logo.png" property="og:image"/>
+  <link href="/assets/css/vvip-luxe.v75.css?v=75" rel="stylesheet"/>
+
+  <script defer src="/assets/js/vvip-global.v75.js?v=75"></script>
+</head>
 <body>
 <div class="wrap">
 <div class="hero">
