--- a/calc/index.html
+++ b/calc/index.html
@@ -14,6 +14,10 @@
   <link rel="stylesheet" href="/assets/c.home.v62.20260217.css" />
 
   <meta name="theme-color" content="#0b0c10" />
+
+  <link href="/assets/css/vvip-luxe.v75.css?v=75" rel="stylesheet"/>
+
+  <script defer src="/assets/js/vvip-global.v75.js?v=75"></script>
 </head>
 <body>
   <div id="shell"></div>
@@ -72,7 +76,7 @@
     </div>
   </main>
 
-  <script defer src="/assets/js/j.8829a3ccde44.js?v=68"></script>
+  <script defer src="/assets/js/j.8829a3ccde44.js?v=75"></script>
   <script defer src="/assets/js/j.9179477b9417.js"></script>
 </body>
 </html>
