--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js?v=70"></script>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=75"></script>
 <meta content="https://88st.cloud/img/logo.png" property="og:image"/>
 <script type="application/ld+json">
 {
@@ -92,6 +92,10 @@
 }
 </script>
 
+
+  <link href="/assets/css/vvip-luxe.v75.css?v=75" rel="stylesheet"/>
+
+  <script defer src="/assets/js/vvip-global.v75.js?v=75"></script>
 </head>
 <body>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
