--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -20,7 +20,7 @@
 <link href="/assets/c.43df7d0713c1.css" rel="stylesheet"/>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <link href="/assets/c.casino.evo.v62.20260217.css?v=74" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js?v=70"></script>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=75"></script>
 <script defer="" src="/assets/js/j.c471c3193855.js"></script>
 <script defer="" src="/assets/js/j.casino.evo.v62.20260217.js?v=74"></script>
 <script src="../assets/js/inline-bundles/b.cba5ff41a7.js"></script>
@@ -38,6 +38,10 @@
 <meta content="/img/logo.png" property="og:image"/><link href="/assets/vvip-pro.v71.css?v=71" rel="stylesheet"/>
 <script defer src="/assets/js/vvip-pro.v71.js?v=71"></script>
 <script defer src="/assets/js/vvip-brief.v71.js?v=71"></script>
+
+  <link href="/assets/css/vvip-luxe.v75.css?v=75" rel="stylesheet"/>
+
+  <script defer src="/assets/js/vvip-global.v75.js?v=75"></script>
 </head>
 <body class="st-app">
 <main class="cs-wrap">
