--- a/casino-strategy/fibonacci/index.html
+++ b/casino-strategy/fibonacci/index.html
@@ -18,7 +18,7 @@
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js?v=68"></script>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=75"></script>
 <link href="/assets/c.40f97b2b9a20.css" rel="stylesheet"/>
 <script type="application/ld+json">
   {
@@ -44,7 +44,11 @@
   ]
 }
   </script>
-<meta content="/img/logo.png" property="og:image"/></head>
+<meta content="/img/logo.png" property="og:image"/>
+  <link href="/assets/css/vvip-luxe.v75.css?v=75" rel="stylesheet"/>
+
+  <script defer src="/assets/js/vvip-global.v75.js?v=75"></script>
+</head>
 <body class="st-app">
 <main class="st-land-wrap">
 <section class="st-land-hero">
