--- a/casino/landing-a_index.html
+++ b/casino/landing-a_index.html
@@ -34,8 +34,12 @@
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js?v=68"></script>
-<meta content="입플·보너스·페이백 분석기 | 88ST" property="og:title"/><meta content="입플/보너스/페이백 조건과 체크리스트, 계산기 링크를 한 곳에서 확인하세요." property="og:description"/><meta content="website" property="og:type"/><meta content="https://88st.cloud/landing-a/" property="og:url"/><meta content="/img/logo.png" property="og:image"/></head>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=75"></script>
+<meta content="입플·보너스·페이백 분석기 | 88ST" property="og:title"/><meta content="입플/보너스/페이백 조건과 체크리스트, 계산기 링크를 한 곳에서 확인하세요." property="og:description"/><meta content="website" property="og:type"/><meta content="https://88st.cloud/landing-a/" property="og:url"/><meta content="/img/logo.png" property="og:image"/>
+  <link href="/assets/css/vvip-luxe.v75.css?v=75" rel="stylesheet"/>
+
+  <script defer src="/assets/js/vvip-global.v75.js?v=75"></script>
+</head>
 <body>
 <div class="wrap">
 <div class="hero">
