--- a/fortune/index.html
+++ b/fortune/index.html
@@ -38,7 +38,7 @@
   <link rel="stylesheet" href="/assets/c.0b3d8a45f8c9.css"/>
   <script defer src="/assets/js/j.efba3509e62c.js"></script>
   <link rel="stylesheet" href="/assets/c.a50dd3bc5b33.css"/>
-  <script defer src="/assets/js/j.8829a3ccde44.js?v=68"></script>
+  <script defer src="/assets/js/j.8829a3ccde44.js?v=75"></script>
 
   <link rel="stylesheet" href="/assets/css/fortune.v62.20260217.css"/>
 
@@ -54,6 +54,10 @@
     .fortune-kpi .v{margin-top:6px;font-size:14px;font-weight:950;line-height:1.5;color:rgba(255,255,255,.95)}
     .fortune-mini{font-size:12px;color:rgba(255,255,255,.72);line-height:1.55;margin-top:10px}
   </style>
+
+  <link href="/assets/css/vvip-luxe.v75.css?v=75" rel="stylesheet"/>
+
+  <script defer src="/assets/js/vvip-global.v75.js?v=75"></script>
 </head>
 <body>
   <h1 style="position:absolute;left:-9999px;">오늘의 운 브리핑 | 별자리·연애·신년운세</h1>
