--- a/ipl/index.html
+++ b/ipl/index.html
@@ -40,8 +40,12 @@
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js?v=68"></script>
-<meta content="/img/logo.png" property="og:image"/></head>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=75"></script>
+<meta content="/img/logo.png" property="og:image"/>
+  <link href="/assets/css/vvip-luxe.v75.css?v=75" rel="stylesheet"/>
+
+  <script defer src="/assets/js/vvip-global.v75.js?v=75"></script>
+</head>
 <body>
 <div class="scam-popup" id="scamPopup" role="region" aria-label="사칭 주의 안내">
 <div class="scam-box">
