--- a/ok/index.html
+++ b/ok/index.html
@@ -12,7 +12,11 @@
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/css/x.58badcbb49ee.css" rel="stylesheet"/>
-<meta content="랜딩 페이지 | 이동 안내 | 88ST" property="og:title"/><meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." property="og:description"/><meta content="website" property="og:type"/><meta content="https://88st.cloud/ok/" property="og:url"/><meta content="/img/logo.png" property="og:image"/></head>
+<meta content="랜딩 페이지 | 이동 안내 | 88ST" property="og:title"/><meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." property="og:description"/><meta content="website" property="og:type"/><meta content="https://88st.cloud/ok/" property="og:url"/><meta content="/img/logo.png" property="og:image"/>
+  <link href="/assets/css/vvip-luxe.v75.css?v=75" rel="stylesheet"/>
+
+  <script defer src="/assets/js/vvip-global.v75.js?v=75"></script>
+</head>
 <body>
 <div class="st-landing-wrap">
 <a aria-label="클릭하여 오케이벳으로 이동" class="st-landing-cover" href="http://ok-8888.com/?code=88ST">
@@ -29,7 +33,7 @@
 <span aria-hidden="true" class="st-tg-dot"></span>
     텔레그램 상담문의
   </a>
-<script defer="" src="/assets/js/j.8829a3ccde44.js?v=68"></script>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=75"></script>
 <script defer="" src="/assets/js/j.d2cf652ff950.js"></script>
 <script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
