--- a/tool-virtual/index.html
+++ b/tool-virtual/index.html
@@ -34,7 +34,7 @@
   <script defer src="/assets/js/j.71bbe4a35d81.js"></script>
   <script defer src="/assets/js/j.d2cf652ff950.js"></script>
   <script defer src="/assets/js/j.efba3509e62c.js"></script>
-  <script defer src="/assets/js/j.8829a3ccde44.js?v=70"></script>
+  <script defer src="/assets/js/j.8829a3ccde44.js?v=75"></script>
 
   <link href="/assets/css/x.11d0a10f603d.css" rel="stylesheet"/>
   <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
@@ -276,6 +276,10 @@
 <link href="/assets/vvip-pro.v71.css?v=71" rel="stylesheet"/>
 <script defer src="/assets/js/vvip-pro.v71.js?v=71"></script>
 <script defer src="/assets/js/vvip-brief.v71.js?v=71"></script>
+
+  <link href="/assets/css/vvip-luxe.v75.css?v=75" rel="stylesheet"/>
+
+  <script defer src="/assets/js/vvip-global.v75.js?v=75"></script>
 </head>
 
 <body>
