--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -23,8 +23,12 @@
 <script defer="" src="/assets/js/j.d2cf652ff950.js"></script>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js?v=68"></script>
-<meta content="/img/logo.png" property="og:image"/></head>
+<script defer="" src="/assets/js/j.8829a3ccde44.js?v=75"></script>
+<meta content="/img/logo.png" property="og:image"/>
+  <link href="/assets/css/vvip-luxe.v75.css?v=75" rel="stylesheet"/>
+
+  <script defer src="/assets/js/vvip-global.v75.js?v=75"></script>
+</head>
 <body>
 <div class="wrap">
 <div class="topbar">
