--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <link href="/assets/css/x.9d7841e705c5.css" rel="stylesheet"/>
+<link href="/assets/c.hero.v76.20260219.css" rel="stylesheet"/>
+<link rel="preload" as="image" href="/img/hero_sports_1100x471.webp" imagesrcset="/img/hero_sports_1100x471.webp 1100w, /img/hero_sports_2200x942.webp 2200w" imagesizes="(max-width: 1140px) calc(100vw - 28px), 1100px">
+<link rel="preload" as="image" href="/img/hero_sports_m_1080x1350.webp" media="(max-width: 720px)">
 <script defer src="/assets/js/inline-bundles/b.fa5e828602.js"></script>
 <script type="application/ld+json">
 {
@@ -96,6 +99,7 @@
   <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
 
   <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
+<script defer src="/assets/js/j.hero.v76.20260219.js"></script>
 </head>
 <body>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
@@ -106,6 +110,82 @@
 <div class="sub">배당을 숫자로 정리하는 가장 빠른 분석기</div>
 </div>
 <div class="section-wrap">
+<section class="heroSection" aria-label="메인 배너">
+  <div class="heroCarousel" id="heroCarousel" data-autoplay="5200">
+    <div class="heroTrack" tabindex="0">
+
+      <article class="heroSlide" data-href="/tool-slot/" aria-label="스포츠 배당 분석기 배너">
+        <div class="heroMedia">
+          <picture>
+            <source type="image/webp" media="(max-width: 720px)" srcset="img/hero_sports_m_1080x1350.webp">
+            <source type="image/webp" srcset="img/hero_sports_1100x471.webp 1100w, img/hero_sports_2200x942.webp 2200w"
+                    sizes="(max-width: 1140px) calc(100vw - 28px), 1100px">
+            <img src="img/hero_sports_1100x471.webp" alt="스포츠 배당 분석기" fetchpriority="high" decoding="async" width="1100" height="471">
+          </picture>
+        </div>
+        <div class="heroOverlay">
+          <div class="heroTag">SPORTS</div>
+          <div class="heroTitle">슬롯 분석기 · RTP</div>
+<a class="heroCta" href="/tool-slot/" data-cta="hero_sports">열기 →</a>
+        </div>
+      </article>
+
+      <article class="heroSlide" data-href="/tool-casino/" aria-label="카지노 전략 분석기 배너">
+        <div class="heroMedia">
+          <picture>
+            <source type="image/webp" media="(max-width: 720px)" srcset="img/hero_casino_m_1080x1350.webp">
+            <source type="image/webp" srcset="img/hero_casino_1100x471.webp 1100w, img/hero_casino_2200x942.webp 2200w"
+                    sizes="(max-width: 1140px) calc(100vw - 28px), 1100px">
+            <img src="img/hero_casino_1100x471.webp" alt="카지노 전략 분석기" loading="lazy" decoding="async" width="1100" height="471">
+          </picture>
+        </div>
+        <div class="heroOverlay">
+          <div class="heroTag">CASINO</div>
+          <div class="heroTitle">카지노 전략 분석기</div>
+<a class="heroCta" href="/tool-casino/" data-cta="hero_casino">열기 →</a>
+        </div>
+      </article>
+
+      <article class="heroSlide" data-href="/tool-minigame/" aria-label="미니게임 분석기 배너">
+        <div class="heroMedia">
+          <picture>
+            <source type="image/webp" media="(max-width: 720px)" srcset="img/hero_minigame_m_1080x1350.webp">
+            <source type="image/webp" srcset="img/hero_minigame_1100x471.webp 1100w, img/hero_minigame_2200x942.webp 2200w"
+                    sizes="(max-width: 1140px) calc(100vw - 28px), 1100px">
+            <img src="img/hero_minigame_1100x471.webp" alt="미니게임 분석기" loading="lazy" decoding="async" width="1100" height="471">
+          </picture>
+        </div>
+        <div class="heroOverlay">
+          <div class="heroTag">MINIGAME</div>
+          <div class="heroTitle">미니게임 분석기</div>
+<a class="heroCta" href="/tool-minigame/" data-cta="hero_minigame">열기 →</a>
+        </div>
+      </article>
+
+      <article class="heroSlide" data-href="/tool-slot/" aria-label="슬롯 분석기 배너">
+        <div class="heroMedia">
+          <picture>
+            <source type="image/webp" media="(max-width: 720px)" srcset="img/hero_slots_m_1080x1350.webp">
+            <source type="image/webp" srcset="img/hero_slots_1100x471.webp 1100w, img/hero_slots_2200x942.webp 2200w"
+                    sizes="(max-width: 1140px) calc(100vw - 28px), 1100px">
+            <img src="img/hero_slots_1100x471.webp" alt="슬롯 분석기" loading="lazy" decoding="async" width="1100" height="471">
+          </picture>
+        </div>
+        <div class="heroOverlay">
+          <div class="heroTag">SLOTS</div>
+          <div class="heroTitle">슬롯 분석기</div>
+<a class="heroCta" href="/tool-slot/" data-cta="hero_slots">열기 →</a>
+        </div>
+      </article>
+
+    </div>
+
+    <button class="heroArrow prev" type="button" aria-label="이전 배너">‹</button>
+    <button class="heroArrow next" type="button" aria-label="다음 배너">›</button>
+    <div class="heroDots" role="tablist" aria-label="배너 선택"></div>
+  </div>
+</section>
+
 <div class="section" id="analyzerSection">
 <div class="title"><span class="badge">MAIN</span>분석기 바로가기</div>
 <div class="cta-row">
