--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <link href="/assets/css/x.9d7841e705c5.css" rel="stylesheet"/>
+<link href="/assets/c.banner.v81.20260219.css" rel="stylesheet"/>
 <link href="/assets/c.hero.v76.20260219.css" rel="stylesheet"/>
 <link rel="preload" as="image" href="/img/hero_sports_1100x471.webp" imagesrcset="/img/hero_sports_1100x471.webp 1100w, /img/hero_sports_2200x942.webp 2200w" imagesizes="(max-width: 1140px) calc(100vw - 28px), 1100px">
 <link rel="preload" as="image" href="/img/hero_sports_m_1080x1350.webp" media="(max-width: 720px)">
@@ -110,144 +111,15 @@
 <div class="sub">배당을 숫자로 정리하는 가장 빠른 분석기</div>
 </div>
 <div class="section-wrap">
-<section class="heroSection" aria-label="메인 배너">
-  <div class="heroCarousel" id="heroCarousel" data-autoplay="5200">
-    <div class="heroTrack" tabindex="0">
-
-      <article class="heroSlide" data-href="/tool-slot/" aria-label="스포츠 배당 분석기 배너">
-        <div class="heroMedia">
-          <picture>
-            <source type="image/webp" media="(max-width: 720px)" srcset="img/hero_sports_m_1080x1350.webp">
-            <source type="image/webp" srcset="img/hero_sports_1100x471.webp 1100w, img/hero_sports_2200x942.webp 2200w"
-                    sizes="(max-width: 1140px) calc(100vw - 28px), 1100px">
-            <img src="img/hero_sports_1100x471.webp" alt="스포츠 배당 분석기" fetchpriority="high" decoding="async" width="1100" height="471">
-          </picture>
-        </div>
-        <div class="heroOverlay">
-          <div class="heroTag">SPORTS</div>
-          <div class="heroTitle">슬롯 분석기 · RTP</div>
-<a class="heroCta" href="/tool-slot/" data-cta="hero_sports">열기 →</a>
-        </div>
-      </article>
-
-      <article class="heroSlide" data-href="/tool-casino/" aria-label="카지노 전략 분석기 배너">
-        <div class="heroMedia">
-          <picture>
-            <source type="image/webp" media="(max-width: 720px)" srcset="img/hero_casino_m_1080x1350.webp">
-            <source type="image/webp" srcset="img/hero_casino_1100x471.webp 1100w, img/hero_casino_2200x942.webp 2200w"
-                    sizes="(max-width: 1140px) calc(100vw - 28px), 1100px">
-            <img src="img/hero_casino_1100x471.webp" alt="카지노 전략 분석기" loading="lazy" decoding="async" width="1100" height="471">
-          </picture>
-        </div>
-        <div class="heroOverlay">
-          <div class="heroTag">CASINO</div>
-          <div class="heroTitle">카지노 전략 분석기</div>
-<a class="heroCta" href="/tool-casino/" data-cta="hero_casino">열기 →</a>
-        </div>
-      </article>
-
-      <article class="heroSlide" data-href="/tool-minigame/" aria-label="미니게임 분석기 배너">
-        <div class="heroMedia">
-          <picture>
-            <source type="image/webp" media="(max-width: 720px)" srcset="img/hero_minigame_m_1080x1350.webp">
-            <source type="image/webp" srcset="img/hero_minigame_1100x471.webp 1100w, img/hero_minigame_2200x942.webp 2200w"
-                    sizes="(max-width: 1140px) calc(100vw - 28px), 1100px">
-            <img src="img/hero_minigame_1100x471.webp" alt="미니게임 분석기" loading="lazy" decoding="async" width="1100" height="471">
-          </picture>
-        </div>
-        <div class="heroOverlay">
-          <div class="heroTag">MINIGAME</div>
-          <div class="heroTitle">미니게임 분석기</div>
-<a class="heroCta" href="/tool-minigame/" data-cta="hero_minigame">열기 →</a>
-        </div>
-      </article>
-
-      <article class="heroSlide" data-href="/tool-slot/" aria-label="슬롯 분석기 배너">
-        <div class="heroMedia">
-          <picture>
-            <source type="image/webp" media="(max-width: 720px)" srcset="img/hero_slots_m_1080x1350.webp">
-            <source type="image/webp" srcset="img/hero_slots_1100x471.webp 1100w, img/hero_slots_2200x942.webp 2200w"
-                    sizes="(max-width: 1140px) calc(100vw - 28px), 1100px">
-            <img src="img/hero_slots_1100x471.webp" alt="슬롯 분석기" loading="lazy" decoding="async" width="1100" height="471">
-          </picture>
-        </div>
-        <div class="heroOverlay">
-          <div class="heroTag">SLOTS</div>
-          <div class="heroTitle">슬롯 분석기</div>
-<a class="heroCta" href="/tool-slot/" data-cta="hero_slots">열기 →</a>
-        </div>
-      </article>
-
-    </div>
-
-    <button class="heroArrow prev" type="button" aria-label="이전 배너">‹</button>
-    <button class="heroArrow next" type="button" aria-label="다음 배너">›</button>
-    <div class="heroDots" role="tablist" aria-label="배너 선택"></div>
-  </div>
-</section>
-
-<div class="section" id="analyzerSection">
-<div class="title"><span class="badge">MAIN</span>분석기 바로가기</div>
-<div class="cta-row">
-<a class="analyze-btn primary" data-cta="open_tool_sports" href="/analysis/">
-<span aria-hidden="true" class="icon">
-<svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
-<path d="M3 3v18h18"></path>
-<path d="M7 14l3-3 3 2 5-6"></path>
-</svg>
-</span>
-<span class="label">스포츠 분석기<span class="sub"> 중·고급·핸디·언더·오버·EV</span></span>
-</a>
-<a class="analyze-btn secondary" data-cta="open_tool_casino" href="/tool-casino/">
-<span aria-hidden="true" class="icon">
-<svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
-<path d="M4 8a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V8z"></path>
-<path d="M8 12h0"></path>
-<path d="M12 12h0"></path>
-<path d="M16 12h0"></path>
-</svg>
-</span>
-<span class="label">미니카지노 전략 분석기<span class="sub"> 마틴·파롤리·달랑·오스카·피보·라부</span></span>
-</a>
-<a class="analyze-btn secondary" data-cta="open_tool_minigame" href="/tool-minigame/">
-<span aria-hidden="true" class="icon">
-<svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
-<path d="M12 3v18"></path>
-<path d="M3 12h18"></path>
-<path d="M7 7l10 10"></path>
-<path d="M17 7L7 17"></path>
-</svg>
-</span>
-<span class="label">미니게임 분석기<span class="sub"> 동행 파워볼·파워볼+·키노사다리</span></span>
-</a>
-<a class="analyze-btn secondary" data-cta="open_tool_virtual" href="/tool-virtual/">
-<span aria-hidden="true" class="icon">
-<svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
-<path d="M21 16V8a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"></path>
-<path d="M7 15h.01"></path>
-<path d="M11 15h2"></path>
-<path d="M16 15h.01"></path>
-<path d="M7 9h10"></path>
-</svg>
-</span>
-<span class="label">BET365 가상게임 분석기<span class="sub">가상축구·농구·테니스·경마·레이싱</span></span>
-</a>
-<a class="analyze-btn secondary" data-cta="open_tool_slot" href="/tool-slot/">
-<span aria-hidden="true" class="icon">
-<svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
-<rect height="18" rx="2" width="14" x="5" y="3"></rect>
-<path d="M8 7h2"></path>
-<path d="M12 7h2"></path>
-<path d="M16 7h0"></path>
-<path d="M8 11h2"></path>
-<path d="M12 11h2"></path>
-<path d="M8 15h8"></path>
-</svg>
-</span>
-<span class="label">슬롯 환수율 분석기<span class="sub"> RTP·변동성·세션 비용·뱅크롤</span></span>
-</a>
+<div class="mainHero mainHero--img" aria-label="메인 배너">
+  <img class="mainHeroImg" src="/img/main_banner_search88st.png" alt="구글에서 88ST.Cloud 검색 배너" decoding="async" fetchpriority="high">
 </div>
-</div>
+
+
+
+
+
+
 
 <div class="section" id="whySection">
 <div class="title"><span class="badge">WHY</span>왜 88 분석기를 써야 하나요?</div>
